hphp/hack/test/typecheck/expression_trees/null.php.like_types.exp
File "null.php", line 6, characters 13-16:
Expected `Spliceable<[unresolved], [unresolved], [unresolved]>` because this is being spliced into another Expression Tree (Typing[4110])
  File "expr_tree.hhi", line 37, characters 41-72:
  But got `dynamic` because it is an unenforceable type
